force-app/main/default/objects/Provisioned_Account__c/Provisioned_Account__c.object-meta.xml
<CustomObject>
    <label>Provisioned Account</label>
    <pluralLabel>Provisioned Accounts</pluralLabel>
    <nameField>
        <label>Provisioned Account Name</label>
        <type>AutoNumber</type>
        <displayFormat>PA-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>