force-app/main/default/objects/Provisioned_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provisioned Accounts</relationshipLabel>
    <relationshipName>Provisioned_Accounts</relationshipName>
</CustomField>