force-app/main/default/objects/Provisioned_Account__c/fields/Contract_Value_INR__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_INR__c</fullName>
    <label>Contract Value (INR)</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>