force-app/main/default/objects/Provisioned_Account__c/fields/External_Acct_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Acct_Id__c</fullName>
    <label>External Acct Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>