force-app/main/default/objects/Provisioned_Account__c/fields/Inlet_Id__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Id__c</fullName>
    <label>Inlet Id</label>
    <description>Display as iop_acct_{0000} convention when populated</description>
    <length>40</length>
    <type>Text</type>
</CustomField>