force-app/main/default/objects/Provisioned_Account__c/fields/Invite_Request__c.field-meta.xml
<CustomField>
    <fullName>Invite_Request__c</fullName>
    <label>Invite Request</label>
    <type>Lookup</type>
    <referenceTo>Invite_Request__c</referenceTo>
    <relationshipLabel>Provisioned Accounts</relationshipLabel>
    <relationshipName>Provisioned_Accounts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>