force-app/main/default/objects/Provisioned_Account__c/fields/Plan_Tier__c.field-meta.xml
<CustomField>
    <fullName>Plan_Tier__c</fullName>
    <label>Plan Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Starter</fullName><default>true</default></value>
            <value><fullName>Growth</fullName><default>false</default></value>
            <value><fullName>Scale</fullName><default>false</default></value>
            <value><fullName>Enterprise</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>