force-app/main/default/objects/Provisioned_Account__c/fields/Products_Live__c.field-meta.xml
<CustomField>
    <fullName>Products_Live__c</fullName>
    <label>Products Live</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Payments</fullName>
        </value>
        <value>
            <fullName>Payouts</fullName>
        </value>
        <value>
            <fullName>Billing</fullName>
        </value>
        <value>
            <fullName>Connect</fullName>
        </value>
        <value>
            <fullName>Radar</fullName>
        </value>
        <value>
            <fullName>Tax</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>