force-app/main/default/objects/Provisioned_Account__c/fields/Publishable_Key__c.field-meta.xml
<CustomField>
    <fullName>Publishable_Key__c</fullName>
    <label>Publishable Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>