force-app/main/default/objects/Provisioned_Account__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>true</default></value>
            <value><fullName>Medium</fullName><default>false</default></value>
            <value><fullName>High</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>