force-app/main/default/objects/Provisioned_Account__c/fields/Secret_Key_Masked__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key_Masked__c</fullName>
    <label>Secret Key Masked</label>
    <description>Masked value only, e.g. sk_live_****1234 — never the real secret</description>
    <length>120</length>
    <type>Text</type>
</CustomField>