force-app/main/default/objects/Provisioned_Account__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        <value>
            <fullName>Active</fullName>
            <default>true</default>
        </value>
        <value>
            <fullName>Paused</fullName>
        </value>
        <value>
            <fullName>Cancelled</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>