force-app/main/default/objects/Provisioned_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All Provisioned Accounts</label>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>External_Acct_Id__c</columns>
    <columns>Products_Live__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>